Group Message Notifications Now Being Received
- App now shows group messages that the user has subscribed to
- Can now add contacts
- Adding contact checks if contact already exists and if so returns the conversation id
- Adding a room subscription checks if the room subscription exists and if so returns the room membership id

--- a/Client/Pages/Chat.razor
+++ b/Client/Pages/Chat.razor
@@ -89,9 +89,18 @@
                     StateHasChanged();
                 }
             }
-            else
+        });
+
+        hubConnection.On<ChatMessage, Room>("RoomNotification", async (message, room) =>
+        {
+            if (Mode == ChatMode.RoomChat)
             {
-            
+                if (room.Id == RoomId)
+                {
+                    Messages.Add(message);
+
+                    StateHasChanged();
+                }
             }
         });
 
